--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,11 @@
 <resources>
-	<string name="app_name">Timefighter</string>
-	<string name="tap_me">Tap me!</string>
-	<string name="your_score">Your Score: %1$d</string>
-	<string name="time_left">Time left: %1$d</string>
-	<string name="game_over_message">Times up! Your score was: %1$d</string>
-	<string name="name_of_list">What is the name of your list?</string>
-	<string name="create_list">Create</string>
+    <string name="app_name">Timefighter</string>
+    <string name="tap_me">Tap me!</string>
+    <string name="your_score">Your Score: %1$d</string>
+    <string name="time_left">Time left: %1$d</string>
+    <string name="game_over_message">Times up! Your score was: %1$d</string>
+    <string name="name_of_list">What is the name of your list?</string>
+    <string name="search_hint">Enter podcast search</string>
+    <string name="create_list">Create</string>
+    <string name="search">Search</string>
 </resources>
